--- a/k8s/backend.yml
+++ b/k8s/backend.yml
@@ -29,9 +29,10 @@ kind: Service
 metadata:
   name: backend-service
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: react-backend
   ports:
     - port: 8000
       targetPort: 8000
+      nodePort: 30007
