--- a/k8s/frontend.yml
+++ b/k8s/frontend.yml
@@ -19,7 +19,7 @@ spec:
             - containerPort: 3000
           env:
             - name: REACT_APP_BACKEND_URL
-              value: http://192.168.49.2:30007
+              value: http://backend-service:8000/api
           resources: {}
 ---
 apiVersion: v1
