--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: crud.app.io
+    - host: crud.rhishi.live
       http:
         paths:
           - path: /api
